backward support hw2.x

--- a/cam_bl/Makefile
+++ b/cam_bl/Makefile
@@ -65,8 +65,8 @@ cdnet/parser/cdnet_l0.c \
 cdnet/parser/cdnet_l1.c \
 cdnet/parser/cdnet.c \
 cdnet/dev/cdctl_pll_cal.c \
-cdnet/dev/cdctl.c \
 cdnet/utils/cd_list.c \
+usr/cdctl_old.c \
 usr/config.c \
 usr/common_services.c \
 usr/app_main.c
