--- a/cam_fw/Makefile
+++ b/cam_fw/Makefile
@@ -68,9 +68,9 @@ cdnet/parser/cdnet_l1.c \
 cdnet/parser/cdnet.c \
 cdnet/arch/stm32/arch_wrapper.c \
 cdnet/dev/cdctl_pll_cal.c \
-cdnet/dev/cdctl.c \
 cdnet/utils/cd_list.c \
 cdnet/utils/hex_dump.c \
+usr/cdctl_old.c \
 usr/config.c \
 usr/common_services.c \
 usr/app_main.c \
